[gd_scene load_steps=6 format=3 uid="uid://hp3p8rkykfpw"]

[ext_resource type="Script" path="res://Scripts/main_garden.gd" id="1_2w40t"]
[ext_resource type="PackedScene" uid="uid://mkat4lptsce" path="res://Levels/AustinDraw.tscn" id="1_ym5i4"]
[ext_resource type="PackedScene" uid="uid://cjndkfg7b5nx4" path="res://hud.tscn" id="2_d3flh"]
[ext_resource type="PackedScene" uid="uid://dj14g5ed4a6om" path="res://inventory_hud.tscn" id="4_do3xs"]
[ext_resource type="PackedScene" uid="uid://bvgqya10gl5hp" path="res://Levels/TestLevels/BenJournalScene.tscn" id="6_yk58j"]

[node name="MainGarden" type="Node3D"]
script = ExtResource("1_2w40t")

[node name="AustinDraw" parent="." instance=ExtResource("1_ym5i4")]

[node name="HUD" parent="." instance=ExtResource("2_d3flh")]

[node name="InventoryHUD" parent="." instance=ExtResource("4_do3xs")]
visible = false

[node name="BenJournalScene" parent="." instance=ExtResource("6_yk58j")]
visible = false

[node name="GridMap" type="GridMap" parent="."]
cell_size = Vector3(16, 16, 16)
